fix (NIMB-42): adjusting branch name in CI

--- a/.github/workflows/integrate_release.yml
+++ b/.github/workflows/integrate_release.yml
@@ -41,7 +41,7 @@ jobs:
         uses: lekterable/branchlint-action@2.1.0
         with:
           allowed: |
-            dev/^[A-Z]+-[0-9]+-[a-z0-9-]+$/
+            feat/^[A-Z]+-[0-9]+-[a-z0-9-]+$/
           errorMessage: "O nome da branch não segue o padrão 'dev/TASK-ID-descricao-em-kebab-case'. Ex: dev/NIMB-42-ajustar-ci"
 
 
