--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "DataProcessing"]
 	path = DataProcessing
 	url = git@https://github.com/FR0M-ZER0/nimbus-data-processing.git
+[submodule "DataLogger"]
+	path = DataLogger
+	url = https://github.com/FR0M-ZER0/DataLogger.git
